--- a/mip/develop/index.yml
+++ b/mip/develop/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: f8fd3bcfdcf627106f00625fad9b7843b0bc619d
-ms.sourcegitcommit: 1cf14852cd14ea91ac964fb03a901238455ffdff
+ms.openlocfilehash: 128d947604239a8b326af3d5f86e6b2e56f1eca3
+ms.sourcegitcommit: 51c99ea4c98b867cde964f51c35450eaa22fac27
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "47446615"
+ms.lasthandoff: 10/24/2018
+ms.locfileid: "49991358"
 documentType: LandingData
 title: Documentation du kit SDK Microsoft Information Protection
 metadata:
@@ -25,12 +25,12 @@ abstract:
   description: Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Microsoft Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.
   aside:
     image:
-      alt: Vidéo de présentation du kit SDK MIP
+      alt: Vidéo MIP SDK @ Ignite 2018
       height: 112
-      src: media/index/tom-mip-sdk.png
+      src: media/index/kartik-tom-mip-sdk.png
       width: 250
-    title: Vue d'ensemble du kit SDK MIP (15:26)
-    href: https://www.youtube.com/embed/HFXI_pcGGRc
+    title: MIP SDK @ Ignite 2018
+    href: https://www.youtube.com/embed/V02HTllv54s
     width: 250
 sections:
 - title: Guides de démarrage rapide de 5 minutes
