--- a/mip/develop/index.yml
+++ b/mip/develop/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 128d947604239a8b326af3d5f86e6b2e56f1eca3
-ms.sourcegitcommit: 65fbe6fc07383c3fdc93ced55061885e7b0de936
+ms.openlocfilehash: c181a300b6a2699a4cb904356c8c27dc8143e45f
+ms.sourcegitcommit: 8c2de5119105cf5d5bc91fcc2202b64e5a779e7c
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 11/12/2018
-ms.locfileid: "49991358"
+ms.lasthandoff: 02/12/2019
+ms.locfileid: "56081041"
 documentType: LandingData
 title: Documentation du kit SDK Microsoft Information Protection
 metadata:
@@ -12,7 +12,7 @@ metadata:
   description: Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Microsoft Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.
   services: information-protection
   author: BryanLa
-  manager: mbaldwin
+  manager: barbkess
   layout: LandingPage
   ms.assetid: 
   ms.service: information-protection
