--- a/mip/index.yml
+++ b/mip/index.yml
@@ -1,17 +1,17 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: d999bc903ba3fd1c962cee81d3952ae08c353e74
-ms.sourcegitcommit: 65fbe6fc07383c3fdc93ced55061885e7b0de936
+ms.openlocfilehash: d24f5cf1cbe8d296b1a9d608a4253afa5539a233
+ms.sourcegitcommit: 8c2de5119105cf5d5bc91fcc2202b64e5a779e7c
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 11/12/2018
-ms.locfileid: "47445068"
+ms.lasthandoff: 02/12/2019
+ms.locfileid: "56082542"
 documentType: LandingData
 title: Microsoft Information Protection
 metadata:
   title: Documentation de Microsoft Information Protection
   description: Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Microsoft Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.
   author: BryanLa
-  manager: mbaldwin
+  manager: barbkess
   ms.service: information-protection
   services: information-protection
   ms.topic: landing-page
