--- a/mip/develop/index.yml
+++ b/mip/develop/index.yml
@@ -1,17 +1,17 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 311fd83cc4928f657a58ca17cd2d13b7b9f792bd
-ms.sourcegitcommit: 4ed27f50545aae1a58cc922202959d427bcba7ac
+ms.openlocfilehash: fbd7b6a9d15013be6533f971988192d53a19480a
+ms.sourcegitcommit: 471b3683367d93f0673c1cf276a15f83572aa80e
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/16/2019
-ms.locfileid: "56323595"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57330268"
 documentType: LandingData
 title: Documentation du kit SDK Microsoft Information Protection
 metadata:
   title: Documentation du kit SDK Microsoft Information Protection – Tutoriels et informations de référence sur les API
   description: Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Microsoft Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.
   services: information-protection
-  author: BryanLa
+  author: msmbaldwin
   manager: barbkess
   layout: LandingPage
   ms.assetid: 
@@ -20,7 +20,7 @@ metadata:
   ms.devlang: na
   ms.topic: landing-page
   ms.date: 09/26/2018
-  ms.author: bryanla
+  ms.author: mbaldwin
 abstract:
   description: Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Microsoft Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.
   aside:
