--- a/mip/index.yml
+++ b/mip/index.yml
@@ -1,22 +1,22 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: d24f5cf1cbe8d296b1a9d608a4253afa5539a233
-ms.sourcegitcommit: 8c2de5119105cf5d5bc91fcc2202b64e5a779e7c
+ms.openlocfilehash: 7643f9eb25665d7a1bc1b2897be521cd30c06757
+ms.sourcegitcommit: 471b3683367d93f0673c1cf276a15f83572aa80e
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/12/2019
-ms.locfileid: "56082542"
+ms.lasthandoff: 03/05/2019
+ms.locfileid: "57332716"
 documentType: LandingData
 title: Microsoft Information Protection
 metadata:
   title: Documentation de Microsoft Information Protection
   description: Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Microsoft Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.
-  author: BryanLa
+  author: msmbaldwin
   manager: barbkess
   ms.service: information-protection
   services: information-protection
   ms.topic: landing-page
   ms.date: 09/26/2018
-  ms.author: bryanla
+  ms.author: mbaldwin
   layout: LandingPage
 abstract:
   description: Contrôlez et sécurisez les e-mails, les documents et les données sensibles que vous partagez en dehors de votre entreprise. Grâce à une classification facile, des étiquettes incorporées et des autorisations, améliorez la protection des données avec Microsoft Information Protection, où qu’elles soient stockées et quelles que soient les personnes avec qui vous les partagez.
