commit translated contents

--- a/mip/develop/toc.yml
+++ b/mip/develop/toc.yml
@@ -35,8 +35,9 @@ items:
   - name: API
     href: concept-apis-use-cases.md
   - name: Profil et moteur (C++)
-    href: concept-profile-engine-cpp.md
     items:
+    - name: Concepts des objets de profil et de moteur
+      href: concept-profile-engine-cpp.md
     - name: Profil de l’API de fichier (C++)
       href: concept-profile-engine-file-profile-cpp.md
     - name: Moteur de l’API de fichier (C++)
@@ -50,8 +51,9 @@ items:
     - name: Moteur de l’API de protection (C++)
       href: concept-profile-engine-protection-engine-cpp.md
   - name: Authentification (C++)
-    href: concept-authentication-cpp.md
     items:
+    - name: Concepts d’authentification
+      href: concept-authentication-cpp.md
     - name: Implémentation d’un délégué d’authentification (C++)
       href: concept-authentication-delegate-cpp.md
     - name: Acquisition d’un jeton d’accès (PowerShell)
@@ -61,13 +63,15 @@ items:
   - name: Gestionnaires
     items:
     - name: Gestionnaire de l’API de fichier (C++)
-      href: concept-handler-file-cpp.md
       items:
+      - name: Concepts du Gestionnaire de fichiers
+        href: concept-handler-file-cpp.md
       - name: Audit
         href: concept-auditing-file-cpp.md
     - name: Gestionnaire de l’API de stratégie (C++)
-      href: concept-handler-policy-cpp.md
       items:
+      - name: Concepts du Gestionnaire de stratégies
+        href: concept-handler-policy-cpp.md
       - name: État de l’exécution
         href: concept-handler-policy-executionstate-cpp.md
       - name: Actions de calcul
@@ -81,8 +85,9 @@ items:
   - name: Métadonnées
     href: concept-mip-metadata.md
   - name: Observateurs pour async (C++)
-    href: concept-async-observers.md
     items:
+    - name: Concepts des observateurs
+      href: concept-async-observers.md
     - name: Observateurs de l’API de fichier (C++)
       href: concept-async-observers-file-cpp.md
     - name: Observateurs de l’API de stratégie (C++)
@@ -92,8 +97,9 @@ items:
 - name: Référence
   items:
   - name: Bibliothèque C++
-    href: reference/mip-sdk-reference.md
     items:
+    - name: Vue d’ensemble de la bibliothèque C++
+      href: reference/mip-sdk-reference.md
     - name: Enums et structs
       href: reference/mip-enums-and-structs.md
     - name: Fonctions
@@ -110,6 +116,8 @@ items:
         href: reference/class_mip_addcontentheaderaction.md
       - name: AddWatermarkAction
         href: reference/class_mip_addwatermarkaction.md
+      - name: AdhocProtectionRequiredError
+        href: reference/class_mip_adhocprotectionrequirederror.md
       - name: ApplyLabelAction
         href: reference/class_mip_applylabelaction.md
       - name: AuthDelegate
@@ -156,6 +164,8 @@ items:
         href: reference/class_mip_fileprofile_settings.md
       - name: HttpDelegate
         href: reference/class_mip_httpdelegate.md
+      - name: HttpOperation
+        href: reference/class_mip_httpoperation.md
       - name: HttpRequest
         href: reference/class_mip_httprequest.md
       - name: HttpResponse
@@ -186,6 +196,8 @@ items:
         href: reference/class_mip_nopolicyerror.md
       - name: NotSupportedError
         href: reference/class_mip_notsupportederror.md
+      - name: OperationCancelledError
+        href: reference/class_mip_operationcancellederror.md
       - name: PolicyEngine
         href: reference/class_mip_policyengine.md
       - name: PolicyEngine::Settings
@@ -246,6 +258,8 @@ items:
         href: reference/class_mip_servicedisablederror.md
       - name: Flux
         href: reference/class_mip_stream.md
+      - name: TaskDispatcherDelegate
+        href: reference/class_mip_taskdispatcherdelegate.md
       - name: TransientNetworkError
         href: reference/class_mip_transientnetworkerror.md
       - name: UserRights
@@ -262,15 +276,15 @@ items:
     href: faqs-known-issues.md
   - name: Forums
     href: https://stackoverflow.com/questions/tagged/microsoft-information-protection
-  - name: exemples
+  - name: Exemples
     href: https://azure.microsoft.com/resources/samples/?sort=0&term=mip+sdk
   - name: Meilleures pratiques en matière de sécurité
     href: /azure/information-protection/develop/security-guidelines?context=/information-protection/develop/rc/rc
   - name: Nouveautés de la version 1.1
     href: https://techcommunity.microsoft.com/t5/Microsoft-Information-Protection/MIP-SDK-1-1-Now-GA/ba-p/328325
-ms.openlocfilehash: 68fae7819664fadd7fa470cd8db9f45eb430dc5b
-ms.sourcegitcommit: dde803603371dc30d40ca7225f330163bcc7c103
+ms.openlocfilehash: f71e85308a3bf03dddfaed5c1f1fc8df7aeae3b7
+ms.sourcegitcommit: ea76aade54134afaf5023145fcb755e40c7b84b7
 ms.translationtype: HT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 02/26/2019
-ms.locfileid: "56825983"
+ms.lasthandoff: 04/15/2019
+ms.locfileid: "59574412"
